Kubernetes/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: pftnamespace
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8080 
      targetPort: 8080
  type: ClusterIP
