Kubernetes/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-db
  namespace: pftnamespace
spec:
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: database
  type: ClusterIP
