Kubernetes/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: pftnamespace
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: frontend
