Kubernetes/statefulset-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-db
  namespace: pftnamespace
spec:
  clusterIP: None
  selector:
    app: database
  ports:
    - port: 3306
      targetPort: 3306
      name: mysql
